# morvox

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  morvox  pyproject.toml
.github/workflows/: release.yml
src/morvox/: __init__.py  __main__.py  commands.py  constants.py  recording.py  state.py  widget.py
src/morvox/backends/: __init__.py  linux.py  macos.py  windows.py
